--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "webapplication for Euclid crew",
   "main": "index.js",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
     "localtunnel": "^1.8.2",
-    "ngrok": "^2.2.4"
+    "querystring": "^0.2.0",
+    "url": "^0.11.0",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {},
   "scripts": {
