--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.0",
     "dotenv": "^4.0.0",
     "express": "~4.14.1",
+    "mongodb": "file:node_modules\\mongodb",
     "mongoose": "^4.8.5",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.9.8",
