--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ build/Release
 # Dependency directory
 # https://docs.npmjs.com/cli/shrinkwrap#caveats
 node_modules
+moment.min.js
 
 # Debug log from npm
 npm-debug.log
