Added dev script for npm (basically the same except for the port for now)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "export PORT=3000; nodemon ./bin/www"
+    "dev": "nodemon ./bin/www-dev"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
